[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-space-visualizer"
version = "0.1.0"
description = "Diagnostic tool for option loss under constraints"
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
  "streamlit>=1.30.0,<2.0.0",
  "pandas>=2.0.3,<3.0.0",
  "numpy>=1.24.4,<2.0.0",
  "scipy>=1.10.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<8.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "ruff>=0.1.0,<1.0.0",
]
